--- a/frontend/s09/discussion/index.css
+++ b/frontend/s09/discussion/index.css
@@ -11,8 +11,92 @@ body {
 }
 
 nav {
+	/*shorthand property*/
+	/*applied padding to all sides*/
+	/*value is 12.8 pixels based on the root element font size*/
+	/*creates space from between the ul tag and nav element*/
 	padding: 0.8rem;
+	/*properties that make up the "padding" property*/
 	margin-bottom: 2rem;
+	/*creates space between the nav and the intro section*/
 	border-bottom: 1px solid gray;
 	list-style-type: none;
+}
+
+/*margin vs padding*/
+/*margin is best used when creating space between elements*/
+/*padding is best used when creating space between an element's border and its content*/
+
+nav .nav, nav .nav-logo {
+	margin: 0.5rem;
+	/*changes elements to inline elements*/
+	display: inline;
+}
+
+/*intro section*/
+#intro {
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-top: 2rem;
+	padding-bottom: 3rem;
+	/*shorthand property*/
+	/*padding: 2rem 10% 3rem;*/
+	/*padding: top right bottom left*/
+	text-align: center;
+}
+
+.header {
+	/*best used when horizontally aligning text instead of using margin and padding*/
+	text-align: center;
+}
+
+#intro h2, #intro p {
+	/*creates space between the contents of the intro section*/
+	margin-bottom: 1rem;
+}
+
+#intro button {
+	color: white;
+	/*changes the thickness of the text*/
+	font-weight: bold;
+	background-color: #c2195b;
+	border-radius: 25px;
+	font-size: 1rem;
+	/*creates a space between the button text and the border*/
+	padding: 1rem;
+}
+
+/*succeed info section*/
+/*exact same properties as the intro section but can have it's own CSS rule for flexibility*/
+#succeed-info {
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-top: 2rem;
+	padding-bottom: 3rem;
+}
+
+#succeed-info h2 {
+	margin-bottom: 1rem;
+}
+
+#succeed-info h3 {
+	text-align: center;
+	margin-bottom: 1rem;
+}
+
+#succeed-info .card {
+	/*allows the cards to appear beside each other*/
+	display: inline-block;
+	/*aligns elements with the tallest element in line*/
+	/*used with the "inline-block" value*/
+	vertical-align: top;
+	/*allows for the cards to have equal height that adjust with the content*/
+	min-height: 175px;
+	border: 1px solid black;
+	/*measurement is based on equally dividing the parent container's width*/
+	/*only occupies 30% and not 33.33% because of margin to avoid overflow and horizontal scrolling*/
+	width: 30%;
+	/*creates a horizontal spacing between cards*/
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
